Navigator refactor: + NavigatorModel.routes > NavigatorModel.pages + NavigatorModel.pages > NavigatorModel.stack + NavigatorPageModel > PageModel + Removed `Page` from mobile toolkit. Navigator and TabContainer now wrap their content in an Onsen Page. + Fixed Toolbox 'Containers' page styling

--- a/client-app/src/mobile/App.scss
+++ b/client-app/src/mobile/App.scss
@@ -25,7 +25,7 @@
   border-bottom: var(--xh-border-solid);
 }
 
-.toolbox-containers-page .xh-vframe {
+.toolbox-containers-page .xh-panel__content {
   & > .xh-hbox,
   & > .xh-vbox {
     flex: 1;
